2009-07-15  smeghead <smeghead@users.sourceforge.jp>

    * トップのスタイルシートの調整をした。

2009-07-14  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果のRSSダウンロードを実装した。

2009-07-11  smeghead <smeghead@users.sourceforge.jp>

    * 複数サブプロジェクトの検索処理の実装中
    * 変数名g_project_name,g_project_name_4_urlをg_project_code,g_project_code_4_urlに変更した。
    * メモリリークを探す時のためのオプションMEMORYDEBUGを追加した。
    * プロジェクト用のdbのsettingテーブルにロケール用のレコードを追加した。
      $ su
      # echo "insert into setting(name, value) values ('locale', 'ja_JP');" | sqlite3 1.db

2009-07-10  smeghead <smeghead@users.sourceforge.jp>

    * 複数サブプロジェクトの検索処理の実装中

2009-07-09  smeghead <smeghead@users.sourceforge.jp>

    * 複数サブプロジェクトの検索処理の実装中

2009-07-05  smeghead <smeghead@users.sourceforge.jp>

    * 国際化対応中

2009-07-02  smeghead <smeghead@users.sourceforge.jp>

    * 国際化対応を開始した。

2009-06-29  smeghead <smeghead@users.sourceforge.jp>

    * サブプロジェクトの横断検索処理作成。

2009-06-28  smeghead <smeghead@users.sourceforge.jp>

    * チケットページにも状態別の検索リンクとID検索と新規チケットリンクを追加。

2009-06-23  smeghead <smeghead@users.sourceforge.jp>

    * チケット一覧などで状態などの背景に色を付けるためのスタイルシートの指定方法を変更した。
      今までは、base64を元に独自の変換をした文字列をcssのクラス名としていたが、IDを示す数字にした。field3-1など。

2009-06-22  smeghead <smeghead@users.sourceforge.jp>

    * CSV形式でのダウンロードでは、文字コード変換しないように修正した。(今までは、UTF-8からCP932に変換していた)

2009-06-20  smeghead <smeghead@users.sourceforge.jp>

    * 共有ライブラリのhookのインターフェースの変更。インターフェース用の構造体を本体に依存しない形で再定義した。

2009-06-19  smeghead <smeghead@users.sourceforge.jp>

    * 1.2.9-bataリリース

2009-06-19  smeghead <smeghead@users.sourceforge.jp>

    * プロジェクト用のデータベース作成時に、ファイルアップロードの最大サイズの
      レコードを追加するようにした。

2009-06-17  smeghead <smeghead@users.sourceforge.jp>

    * アップロードできるファイルの最大サイズを変更可能にした。以前のバージョン
      からの移行の場合は、以下のSQLを各サブプロジェクトのデータベースファイル
      に対して実行する必要があります。
    $ cd db
    $ echo "insert into setting(name, value) values ('upload_max_size', 512);" | sqlite3 2.db
    ※2.db 以外にもサブプロジェクト用DBが存在している場合(3.db,
    4.dbなど)は、それぞれのDBに対して同じSQLを実行してください。
