@@ -1,4 +1,4 @@
-VERSION = 1.2.9-beta
+VERSION = 1.2.10-beta
 COPYRIGHT = Copyright\ smeghead\ 2007\ -\ 2009
 CC = gcc
 CC_VERSION = ${shell gcc --version | grep 'gcc.*[0-9]\.' | sed -e 's/gcc[^0-9]*\([0-9]\).*/\1/g'}
@@ -19,42 +19,43 @@ ifeq ($(OS), CYGWIN_NT-5.1)
 endif
 
 #debug
-CFLAGS += -DDEBUG
+#CFLAGS += -DDEBUG
 #CFLAGS += -DMEMORYDEBUG
 
 default: index.cgi admin.cgi
 
-admin.o: admin.c alloc.h util.h list.h data.h dbutil.h simple_string.h \
-	  admin_project.h admin_top.h
-admin_project.o: admin_project.c data.h list.h db_project.h dbutil.h \
-	  util.h simple_string.h db_top.h alloc.h wiki.h
-admin_top.o: admin_top.c data.h list.h db_top.h dbutil.h util.h \
-	  simple_string.h db_project.h alloc.h wiki.h hook.h csv.h
-alloc.o: alloc.c
-conv.o: conv.c
-csv.o: csv.c csv.h list.h simple_string.h alloc.h util.h data.h dbutil.h
-data.o: data.c data.h list.h alloc.h util.h dbutil.h simple_string.h
-db_project.o: db_project.c data.h list.h db_project.h dbutil.h util.h \
-	  simple_string.h alloc.h
-db_top.o: db_top.c data.h list.h db_project.h dbutil.h util.h \
-	  simple_string.h alloc.h
-dbutil.o: dbutil.c alloc.h util.h list.h data.h dbutil.h simple_string.h
-hook.o: hook.c data.h list.h alloc.h util.h dbutil.h simple_string.h \
-	  hook.h
-index.o: index.c alloc.h util.h list.h data.h dbutil.h simple_string.h \
-	  index_top.h index_project.h
-index_project.o: index_project.c data.h list.h db_project.h dbutil.h \
-	  util.h simple_string.h db_top.h alloc.h wiki.h hook.h csv.h
-index_top.o: index_top.c data.h list.h db_top.h dbutil.h util.h \
-	  simple_string.h db_project.h alloc.h wiki.h hook.h csv.h
-list.o: list.c alloc.h util.h list.h data.h dbutil.h simple_string.h
-simple_string.o: simple_string.c alloc.h util.h list.h data.h dbutil.h \
-	  simple_string.h
-util.o: util.c alloc.h conv.h util.h list.h data.h dbutil.h \
-	  simple_string.h hook.h
-wiki.o: wiki.c wiki.h dbutil.h util.h list.h data.h simple_string.h \
-	  alloc.h db_project.h
 
+admin.o: admin.c alloc.h util.h list.h data.h simple_string.h dbutil.h \
+  admin_project.h admin_top.h db_top.h
+admin_project.o: admin_project.c data.h list.h simple_string.h \
+  db_project.h dbutil.h util.h db_top.h alloc.h wiki.h
+admin_top.o: admin_top.c data.h list.h simple_string.h db_top.h dbutil.h \
+  util.h db_project.h alloc.h wiki.h hook.h csv.h
+alloc.o: alloc.c util.h list.h data.h simple_string.h dbutil.h
+conv.o: conv.c simple_string.h
+csv.o: csv.c csv.h list.h simple_string.h alloc.h util.h data.h dbutil.h
+data.o: data.c data.h list.h simple_string.h alloc.h util.h dbutil.h
+db_project.o: db_project.c data.h list.h simple_string.h db_project.h \
+  dbutil.h util.h alloc.h
+db_top.o: db_top.c data.h list.h simple_string.h db_top.h dbutil.h util.h \
+  db_project.h alloc.h
+dbutil.o: dbutil.c alloc.h util.h list.h data.h simple_string.h dbutil.h
+hook.o: hook.c data.h list.h simple_string.h alloc.h util.h dbutil.h \
+  hook.h hook_data.h
+index.o: index.c alloc.h util.h list.h data.h simple_string.h dbutil.h \
+  index_top.h index_project.h db_top.h
+index_project.o: index_project.c data.h list.h simple_string.h \
+  db_project.h dbutil.h util.h db_top.h alloc.h conv.h wiki.h hook.h \
+  csv.h
+index_top.o: index_top.c data.h list.h simple_string.h db_top.h dbutil.h \
+  util.h db_project.h alloc.h wiki.h hook.h csv.h
+list.o: list.c alloc.h util.h list.h data.h simple_string.h dbutil.h
+simple_string.o: simple_string.c alloc.h util.h list.h data.h \
+  simple_string.h dbutil.h
+util.o: util.c alloc.h conv.h util.h list.h data.h simple_string.h \
+  dbutil.h hook.h
+wiki.o: wiki.c wiki.h dbutil.h util.h list.h data.h simple_string.h \
+  alloc.h db_project.h
 
 index.cgi: list.o simple_string.o data.o dbutil.o db_project.o db_top.o hook.o alloc.o conv.o util.o wiki.o csv.o index_project.o index_top.o index.o
 	$(CC) -o $@ $^ $(LFLAGS)
